--- a/axion-front/src/components/CollectionList.css
+++ b/axion-front/src/components/CollectionList.css
@@ -1,10 +1,10 @@
 .content {
-    min-height: 100vh;
-    width: 65%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    justify-content: start;
+  min-height: 100vh;
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  justify-content: start;
 }
 
 .title{
@@ -31,4 +31,30 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 50px;
+}
+
+@media(max-width: 768px){
+  .content{
+    width: 80%;
+  }
+
+  .section-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: .75rem;
+    font-family: var(--primary-font);
+    color: var(--text-color);
+    text-transform: uppercase;
+  }
+
+  .section-title {
+    font-size: 1.25rem;
+    letter-spacing: 0.5px;
+  }
+
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 40px;
+  }
 }
